WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40246
[Qt] DragClientQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40246
Summary
[Qt] DragClientQt.cpp has coding-style errors
Anders Bakken
Reported
2010-06-07 11:43:48 PDT
[Qt] DragClientQt.cpp has coding-style errors
Attachments
Patch
(1.44 KB, patch)
2010-06-07 11:44 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-06-07 11:44:17 PDT
Created
attachment 58058
[details]
Patch
WebKit Commit Bot
Comment 2
2010-06-09 14:52:02 PDT
Comment on
attachment 58058
[details]
Patch Clearing flags on attachment: 58058 Committed
r60915
: <
http://trac.webkit.org/changeset/60915
>
WebKit Commit Bot
Comment 3
2010-06-09 14:52:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug