2010-06-09  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        [Qt] DragClientQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40246

        * WebCoreSupport/DragClientQt.cpp:
        (WebCore::DragClientQt::startDrag):

Canonical link: https://commits.webkit.org/51930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60915 268f45cc-cd09-0410-ab3c-d52691b4dbfc