WebKit/qt/WebCoreSupport/DragClientQt.cpp
@@ -93,7 +93,7 @@ void DragClientQt::startDrag(DragImageRef, const IntPoint&, const IntPoint&, Cli
     static_cast<ClipboardQt*>(clipboard)->invalidateWritableData();
     QWidget* view = m_webPage->view();
     if (view) {
-        QDrag *drag = new QDrag(view);
+        QDrag* drag = new QDrag(view);
         if (clipboardData && clipboardData->hasImage())
             drag->setPixmap(qvariant_cast<QPixmap>(clipboardData->imageData()));
         DragOperation dragOperationMask = clipboard->sourceOperation();
